# JobOps

./: .gitignore  README.md  config.example.yaml  pyproject.toml
app/: streamlit_app.py
scripts/: run_ingest.py
skills/openclaw-jobsearch/: SKILL.md
src/jobsearch/: config.py  models.py
src/jobsearch/cli/: main.py
src/jobsearch/db/: migrate.py  repository.py  schema.sql
src/jobsearch/fetchers/: __init__.py  ashby.py  base.py  greenhouse.py  lever.py  static_sources.py
src/jobsearch/normalize/: canonicalize.py  dedupe.py
src/jobsearch/reports/: html.py  markdown.py
src/jobsearch/tasks/: export.py  import_results.py  schemas.py
tests/: test_pipeline.py
