[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "jobsearch-agent"
version = "0.1.0"
description = "Local-first job search data pipeline"
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["requests>=2.31", "PyYAML>=6.0", "jinja2>=3.1"]

[project.optional-dependencies]
test = ["pytest>=8"]

[project.scripts]
jobctl = "jobsearch.cli.main:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
